app/static/css/main.css
/* ... */
.irc-fg2 {
  color: #3535b3
}

.irc-fg3 {
  color: #2a8c2a
}

.irc-fg4 {
  color: #c33b3b
}

.irc-fg5 {
  color: #c73232
}

.irc-fg6 {
  color: #80267f
}

.irc-fg7 {
  color: #66361f
}

.irc-fg8 {
  color: #d9a641
}

.irc-fg9 {
  color: #3dcc3d
}

.irc-fg10 {
  color: #195555
}

.irc-fg11 {
  color: #2e8c74
}

.irc-fg12 {
  color: #4545e6
}

.irc-fg13 {
  color: #b037b0
}

.irc-fg14 {
  color: #4c4c4c
}

.irc-fg15 {
  color: #959595
}

.irc-bg0 {
  background-color: #ccc
}

.irc-bg1 {
  background-color: #000
}

.irc-bg2 {
  background-color: #3535b3
}

.irc-bg3 {
  background-color: #2a8c2a
}

.irc-bg4 {
  background-color: #c33b3b
}

.irc-bg5 {
  background-color: #c73232
}

.irc-bg6 {
  background-color: #80267f
}

.irc-bg7 {
  background-color: #66361f
}

.irc-bg8 {
  background-color: #d9a641
}

.irc-bg9 {
  background-color: #3dcc3d
}

.irc-bg10 {
  background-color: #195555
}

.irc-bg11 {
  background-color: #2e8c74
}

.irc-bg12 {
  background-color: #4545e6
}

.irc-bg13 {
  background-color: #b037b0
}

.irc-bg14 {
  background-color: #4c4c4c
}

.irc-bg15 {
  background-color: #959595
}

/* Poll styles */

.poll-pbar {
  border: 1px solid #ccc;
  width: 70%;
  margin: 0 5px 2px -5px;
  padding: 1px;
  vertical-align: middle;
  display: inline-block;
  height: 1.5em;
  background: white;
}

.poll-space .poll-vote,
.poll-space .poll-votes {
  vertical-align: middle;
  display: inline-block;
}

.poll-pbar>div {
  background-color: #526a7d;
  height: 1.25em;
}

.poll-pbar.poll-voted>div {
  background-color: var(--primary-color);
}

.poll-pbar.poll-voted {
  border-color: var(--primary-highlight);
}

/* user uploads page */

.uploads.content {
  max-width: 640px;
  display: grid;
}

.uploaditem {
  float: left;
  width: 140px;
  height: 140px;
  border: 1px solid rgba(85, 85, 85, 0.25);
  text-align: center;
}

.uploadlinks {
  padding: 4px;
}

.uploadlink {
  margin-top: 4px;
}

.uploadthumb {
  width: 140px;
  height: 140px;
  margin: auto;
  border-radius: 4px;
}

/* admin */

tr.deletedrow,
.deletedpost,
.deletedcomment {
  background: hsla(0, 100%, 51%, 0.2) !important;
}

a[href="#spoiler"]:hover,
body.dark a[href="#spoiler"]:hover {
  color: #fff
}

spoiler:not(.shown) a {
  pointer-events: none;
  color: #111;
}

spoiler:not(.shown) {
  color: #111;
  background-color: #111;
  border-radius: 3px;
  -webkit-user-select: none;
  user-select: none;
}


spoiler {
  transition: background-color 400ms linear;
}

a[href="#toodamncool"] {
  animation: rb3 4s infinite;
  font-weight: 900;
}

@keyframes rb3 {
  20% {
    color: red;
  }

  40% {
    color: yellow;
  }

  60% {
    color: green;
  }

  80% {
    color: blue;
  }

  100% {
    color: orange;
  }
}

.expandotxt,
.post-content-container,
.commblock .content {
  word-wrap: break-word;
}

.expandotxt a,
.post-content-container a,
.commblock .content a {
  color: #0077d0;
}

.expandotxt a:visited,
.post-content-container a:visited,
.commblock .content a:visited {
  color: #460068;
}

.post-content-container img,
.comments .content img {
  max-width: 100%;
}

.expando-master {
  display: block;
  margin-top: 0.7em;
}

.replybox {
  margin-bottom: 1em;
}

.motto {
  z-index: 20;
  left: 52px;
  bottom: 3.5px;
  position: absolute;
  color: white;
  font-size: smaller;
}

#logocont {
  z-index: -1;
  position: absolute;
}

.admin_alert {
  background-color: #bf0819;
  color: white;
  top: 0;
  position: fixed;
  width: 100%;
  display: block;
  height: 1.5em;
  font-size: 1.1em;
  text-align: center;
  line-height: 1.5em;
  z-index: 150;
}

.body_admin {
  margin-top: 1.5em;
}

.admin_alert form {
  display: inline-block;
}

.btn_link {
  background: none;
  border: none;
  padding: 0;
  color: #0f5386;
  font: inherit;
  text-decoration: underline;
}

/* topbar settings page */

.subsort_item {
  cursor: move;
  padding: 10px 40px;
  width: 32em;
  background: rgba(0, 0, 0, .1)
}

#subsort {
  list-style: none;
}

.bot-tag {
  border-radius: 2px;
  border: 1px solid #afa8a8;
  padding: 1px 3px;
  background: #eee;
  color: #5d5454;
}

.toggledark {
  cursor: pointer;
}

#ban-user-form .date-picker-future.input {
  display: none;
}

.invitecodes .expired {
  color: gray;
  text-decoration: line-through;
}

/* narrower all posts and post layout */

.new-g {
  /* max-width: 1400px; */
  margin-left: auto;
  margin-right: auto;
}

/* Preferences page form */

.new-form-one {
  width: auto;
}

label.new-form-one {
  display: inline-block;
  width: 15em;
  text-align: right;
}

button.new-form-one {
  margin-top: 1em;
  margin-left: 15em;
}

/* Not Green Autocomplete */

.autocomplete>div.selected {
  background: #d2d2d2 !important;
}

/* Proper size and align post links in sub/post/comments */

.wholepost .postinfo .links {
  margin: 4px 0 0 0.25em;
}

.commblock .bottombar.links {
  margin: 4px 0 0 0.25em;
  font: -webkit-control;
  font-size: 1em;
}

.bottombar.links a:hover {
  text-decoration: underline;
}

.links a:hover {
  text-decoration: underline;
}

.links a.comments:hover {
  text-decoration: none;
}

/* Horizontal create post type buttons */

.label-v {
  clear: both;
  display: inline-table;
  overflow: hidden;
}

.label-v .pure-control-group {
  float: left;
}

/* Continued original */

td.close-report-button {
  text-align: center;
}

a.close-report {
  cursor: pointer;
}

.helper-text {
  font-style: italic;
  color: gray;
}

.mod-dash-subs {
  margin: 0 auto;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
  max-width: 800px;
}

.mod-dash-sub {
  margin: 10px;
}

@media (min-width: 860px) {
  .mod.report.content {
    min-width: 650px;
  }
}

.mod.report.close.buttons button,
.mod .user-actions .pure-button {
  margin: 5px;
  white-space: normal;
  height: 90%;
}

.mod button.disabled {
  background-color: gray;
  pointer-events: none;
}

.mod.report.details {
  margin: 20px auto;
  width: 100%;
}

.report-details-item .label {
  font-weight: bold;
}
/* ... */

